[gd_scene load_steps=22 format=3 uid="uid://bpeeucvou1ypq"]

[ext_resource type="PackedScene" uid="uid://b0ii2ky1kdvy5" path="res://enemy/utilities/spawner.tscn" id="1_4xxv1"]
[ext_resource type="Script" path="res://world/world.gd" id="1_7w6ni"]
[ext_resource type="Texture2D" uid="uid://cq8i3u02pgvfx" path="res://world/assets/Cenario1.png" id="1_44nia"]
[ext_resource type="PackedScene" uid="uid://dn26busx8rdxi" path="res://player/player.tscn" id="1_p82kn"]
[ext_resource type="Texture2D" uid="uid://c4boxw0eliy3s" path="res://world/assets/Arvores_v2.png" id="3_oybfi"]
[ext_resource type="AudioStream" uid="uid://d41w6fclmsg6" path="res://future.ogg" id="4_oiw56"]
[ext_resource type="PackedScene" uid="uid://dt1rnijwp4318" path="res://player/player_experience.tscn" id="5_nn8u4"]
[ext_resource type="PackedScene" uid="uid://baaoy7sdytdch" path="res://player/player_life.tscn" id="6_w0xnf"]
[ext_resource type="Script" path="res://world/levelup_control.gd" id="8_bgkol"]
[ext_resource type="Script" path="res://world/scene_ontrol.gd" id="8_xs2jl"]
[ext_resource type="AudioStream" uid="uid://bbvgbspapypfw" path="res://16_bit_space.ogg" id="10_ljdk8"]
[ext_resource type="Texture2D" uid="uid://blqjn8mgbaien" path="res://items/assets/Itens.png" id="10_nyb0n"]
[ext_resource type="AudioStream" uid="uid://bu7vbfxsb5w1f" path="res://glitch.ogg" id="12_xr6h0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vl8dc"]
texture = ExtResource("3_oybfi")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-25.75, -20.5, 25.75, -21, 26.75, 3.75, -27.75, 2.75)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_2tx40"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 3
sources/1 = SubResource("TileSetAtlasSource_vl8dc")

[sub_resource type="LabelSettings" id="LabelSettings_nknnf"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_848dy"]
font_size = 19

[sub_resource type="LabelSettings" id="LabelSettings_6iq30"]
font_size = 13

[sub_resource type="LabelSettings" id="LabelSettings_gw1fn"]
font_size = 25

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ga837"]
a = Vector2(16, 3777)
b = Vector2(2.4603, -8.88826)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_58nrf"]
a = Vector2(-2337, -8)
b = Vector2(5782, -18)

[node name="world" type="Node2D"]
script = ExtResource("1_7w6ni")

[node name="background" type="TextureRect" parent="."]
offset_left = -4595.0
offset_top = -2421.0
offset_right = 5375.0
offset_bottom = 3191.0
texture = ExtResource("1_44nia")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(8, 8)
tile_set = SubResource("TileSet_2tx40")
format = 2
layer_0/tile_data = PackedInt32Array(-458767, 65537, 0, -458766, 65537, 0, -458765, 65537, 0, -458764, 65537, 0, -458763, 65537, 0, -458762, 65537, 0, -458761, 65537, 0, -458760, 65537, 0, -458759, 65537, 0, -458758, 65537, 0, -458757, 65537, 0, -458756, 65537, 0, -458755, 65537, 0, -458754, 65537, 0, -458753, 65537, 0, -524288, 65537, 0, -524287, 65537, 0, -524286, 65537, 0, -524285, 65537, 0, -524284, 65537, 0, -524283, 65537, 0, -524282, 65537, 0, -524281, 65537, 0, -524280, 65537, 0, -524279, 65537, 0, -524278, 65537, 0, -524277, 65537, 0, -524276, 65537, 0, -524275, 65537, 0, -524274, 65537, 0, -524273, 65537, 0, -524272, 65537, 0, -524271, 65537, 0, -524270, 65537, 0, -458768, 65537, 0, -524302, 65537, 0, -524304, 65537, 0, -524303, 65537, 0, -524301, 65537, 0, -524300, 65537, 0, -524299, 65537, 0, -524298, 65537, 0, -524297, 65537, 0, -524296, 65537, 0, -524295, 65537, 0, -524294, 65537, 0, -524293, 65537, 0, -524292, 65537, 0, -524291, 65537, 0, -524290, 65537, 0, -524289, 65537, 0, -589824, 65537, 0, -589823, 65537, 0, -589822, 65537, 0, -589821, 65537, 0, -589820, 65537, 0, -589819, 65537, 0, -589818, 65537, 0, -589817, 65537, 0, -589816, 65537, 0, -589815, 65537, 0, -589814, 65537, 0, -589813, 65537, 0, -589812, 65537, 0, -589811, 65537, 0, -589810, 65537, 0, -589809, 65537, 0, -589808, 65537, 0, -589807, 65537, 0, -589806, 65537, 0, -458734, 65537, 0, -262161, 65537, 0, -327697, 65537, 0, -393233, 65537, 0, -458769, 65537, 0, -524305, 65537, 0, -393232, 65537, 0, -327696, 65537, 0, -262160, 65537, 0, 589808, 65537, 0, 655344, 65537, 0, 589809, 65537, 0, -262159, 65537, 0, -327695, 65537, 0, -393231, 65537, 0, 589810, 65537, 0, 589811, 65537, 0, 589812, 65537, 0, 589813, 65537, 0, 589814, 65537, 0, 589815, 65537, 0, 589816, 65537, 0, 589817, 65537, 0, 589818, 65537, 0, 589819, 65537, 0, 589820, 65537, 0, 589821, 65537, 0, 589822, 65537, 0, 589823, 65537, 0, 524288, 65537, 0, 524289, 65537, 0, 524290, 65537, 0, 524291, 65537, 0, 524292, 65537, 0, 524293, 65537, 0, 524294, 65537, 0, 524295, 65537, 0, 524296, 65537, 0, 524297, 65537, 0, 524298, 65537, 0, 524299, 65537, 0, 524300, 65537, 0, 524301, 65537, 0, 524302, 65537, 0, 524303, 65537, 0, 524304, 65537, 0, 655352, 65537, 0, 655353, 65537, 0, 655354, 65537, 0, 655355, 65537, 0, 655356, 65537, 0, 655357, 65537, 0, 655358, 65537, 0, 655359, 65537, 0, 589824, 65537, 0, 589825, 65537, 0, 589826, 65537, 0, 589827, 65537, 0, 589828, 65537, 0, 589829, 65537, 0, 589830, 65537, 0, 589831, 65537, 0, 589832, 65537, 0, 589833, 65537, 0, 589834, 65537, 0, 589835, 65537, 0, 589836, 65537, 0, 589837, 65537, 0, 589838, 65537, 0, 589839, 65537, 0, 589840, 65537, 0, 589841, 65537, 0, -589841, 65537, 0, -589840, 65537, 0, -589839, 65537, 0, -589838, 65537, 0, -589837, 65537, 0, -589836, 65537, 0, -589835, 65537, 0, -589834, 65537, 0, -589833, 65537, 0, -589832, 65537, 0, -589831, 65537, 0, -589830, 65537, 0, -589829, 65537, 0, -589828, 65537, 0, -589827, 65537, 0, -589826, 65537, 0, -589825, 65537, 0, -655360, 65537, 0, -655359, 65537, 0, -655358, 65537, 0, -655357, 65537, 0, -655356, 65537, 0, -655355, 65537, 0, -655354, 65537, 0, -655353, 65537, 0, -655352, 65537, 0, -655351, 65537, 0, -655350, 65537, 0, -655349, 65537, 0, -655348, 65537, 0, -655347, 65537, 0, -655346, 65537, 0, -655345, 65537, 0, -655344, 65537, 0, -655343, 65537, 0, -655342, 65537, 0, -655341, 65537, 0, -655340, 65537, 0, -589842, 65537, 0, -524306, 65537, 0, -458770, 65537, 0, -393234, 65537, 0, -327698, 65537, 0, -262162, 65537, 0, 720916, 65537, 0, 720889, 65537, 0, 720888, 65537, 0, 720887, 65537, 0, 655350, 65537, 0, 655349, 65537, 0, 655348, 65537, 0, 655345, 65537, 0, 655346, 65537, 0, 655347, 65537, 0, 655351, 65537, 0, 720890, 65537, 0, 720886, 65537, 0, 720885, 65537, 0, 720884, 65537, 0, 720883, 65537, 0, 720882, 65537, 0, 720881, 65537, 0, 720880, 65537, 0, 720879, 65537, 0, 720878, 65537, 0, 786420, 65537, 0, 786421, 65537, 0, 786422, 65537, 0, 786423, 65537, 0, 786424, 65537, 0, 786425, 65537, 0, 786426, 65537, 0, 786427, 65537, 0, 786428, 65537, 0, 786429, 65537, 0, 786430, 65537, 0, 786431, 65537, 0, 720896, 65537, 0, 720897, 65537, 0, 720898, 65537, 0, 720899, 65537, 0, 720900, 65537, 0, 720901, 65537, 0, 720902, 65537, 0, 720903, 65537, 0, 720904, 65537, 0, 720905, 65537, 0, 720891, 65537, 0, 720892, 65537, 0, 720893, 65537, 0, 720894, 65537, 0, 720895, 65537, 0, 655360, 65537, 0, 655361, 65537, 0, 655362, 65537, 0, 655363, 65537, 0, 655364, 65537, 0, 655365, 65537, 0, 655366, 65537, 0, 655367, 65537, 0, 655368, 65537, 0, 655369, 65537, 0, 655370, 65537, 0, 655371, 65537, 0, 655372, 65537, 0, 655373, 65537, 0, 655374, 65537, 0, 655375, 65537, 0, 655376, 65537, 0, 655377, 65537, 0, 655378, 65537, 0, 720912, 65537, 0, 720911, 65537, 0, 720910, 65537, 0, 720909, 65537, 0, 720908, 65537, 0, 720907, 65537, 0, 720906, 65537, 0, 720913, 65537, 0, 786445, 65537, 0, 786444, 65537, 0, 786443, 65537, 0, 786442, 65537, 0, 786441, 65537, 0, 786440, 65537, 0, 786439, 65537, 0, 720914, 65537, 0, 720915, 65537, 0, 786451, 65537, 0, 786450, 65537, 0, 786449, 65537, 0, 786448, 65537, 0, 786447, 65537, 0, 786438, 65537, 0, 786437, 65537, 0, 786436, 65537, 0, 786435, 65537, 0, 786434, 65537, 0, 786433, 65537, 0, 786432, 65537, 0, 851967, 65537, 0, 786446, 65537, 0, 851966, 65537, 0, 851965, 65537, 0, 851964, 65537, 0, 851963, 65537, 0, 851962, 65537, 0, 851961, 65537, 0, 851960, 65537, 0, 851959, 65537, 0, 851958, 65537, 0, 851957, 65537, 0, 851956, 65537, 0, 851955, 65537, 0, 786419, 65537, 0, 786418, 65537, 0, 786417, 65537, 0, 786416, 65537, 0, 851954, 65537, 0, 851953, 65537, 0, 851952, 65537, 0, 851951, 65537, 0, 786415, 65537, 0, 655343, 65537, 0, 589807, 65537, 0, 655382, 65537, 0, 720917, 65537, 0, 786453, 65537, 0, 720918, 65537, 0, 786452, 65537, 0, 655381, 65537, 0, 589846, 65537, 0, 655380, 65537, 0, 655379, 65537, 0, 589844, 65537, 0, 589842, 65537, 0, 589843, 65537, 0, 589845, 65537, 0, 524308, 65537, 0, 524307, 65537, 0, 524306, 65537, 0, 458770, 65537, 0, 458771, 65537, 0, 393235, 65537, 0, 393236, 65537, 0, 458772, 65537, 0, 524305, 65537, 0, -589805, 65537, 0, -458736, 65537, 0, -458737, 65537, 0, -458738, 65537, 0, -458739, 65537, 0, -458740, 65537, 0, -458741, 65537, 0, -458742, 65537, 0, -458743, 65537, 0, -458744, 65537, 0, -458745, 65537, 0, -458746, 65537, 0, -458747, 65537, 0, -458748, 65537, 0, -458749, 65537, 0, -458750, 65537, 0, -458751, 65537, 0, -458752, 65537, 0, -393217, 65537, 0, -393218, 65537, 0, -393219, 65537, 0, -393220, 65537, 0, -393221, 65537, 0, -393222, 65537, 0, -393223, 65537, 0, -458735, 65537, 0, -524269, 65537, 0, -524268, 65537, 0, -458733, 65537, 0, -458732, 65537, 0, -458731, 65537, 0, -458730, 65537, 0, -524267, 65537, 0, -524266, 65537, 0, -524265, 65537, 0, -458729, 65537, 0, -589801, 65537, 0, -589802, 65537, 0, -589803, 65537, 0, -589804, 65537, 0, -655339, 65537, 0, -655338, 65537, 0, -655337, 65537, 0, -655336, 65537, 0, -393229, 65537, 0, -393226, 65537, 0, -393225, 65537, 0, -393224, 65537, 0, -393227, 65537, 0, -393228, 65537, 0, -393230, 65537, 0, -524307, 65537, 0, -262163, 65537, 0, -327700, 65537, 0, -327699, 65537, 0, -196623, 65537, 0, -196625, 65537, 0, -196626, 65537, 0, -131089, 65537, 0, -131090, 65537, 0, -131087, 65537, 0, -65552, 65537, 0, -65551, 65537, 0, -131088, 65537, 0, -196624, 65537, 0, -15, 65537, 0, 65521, 65537, 0, 65520, 65537, 0, -16, 65537, 0, -17, 65537, 0, -65553, 65537, 0, 65519, 65537, 0, 131057, 65537, 0, 131056, 65537, 0, 131055, 65537, 0, 196591, 65537, 0, 262127, 65537, 0, 65518, 65537, 0, 131053, 65537, 0, 196589, 65537, 0, 196588, 65537, 0, 131052, 65537, 0, 65517, 65537, 0, -19, 65537, 0, -65554, 65537, 0, -18, 65537, 0, 131054, 65537, 0, -196627, 65537, 0, -196628, 65537, 0, -196629, 65537, 0, -262164, 65537, 0, -65555, 65537, 0, -20, 65537, 0, -65556, 65537, 0, -131091, 65537, 0, -131092, 65537, 0, 262124, 65537, 0, 262123, 65537, 0, 327659, 65537, 0, 262125, 65537, 0, 196590, 65537, 0, 262126, 65537, 0, 327662, 65537, 0, 327661, 65537, 0, 393196, 65537, 0, 327660, 65537, 0, 196592, 65537, 0, 262128, 65537, 0, 327663, 65537, 0, 196593, 65537, 0, 327664, 65537, 0, 393199, 65537, 0, 262129, 65537, 0, 393200, 65537, 0, 393201, 65537, 0, 327665, 65537, 0, 458736, 65537, 0, 524272, 65537, 0, 524273, 65537, 0, 458737, 65537, 0, 524271, 65537, 0, 458735, 65537, 0, 458734, 65537, 0, 524270, 65537, 0, 393198, 65537, 0, 524269, 65537, 0, 524268, 65537, 0, 524267, 65537, 0, 458731, 65537, 0, 393197, 65537, 0, 589805, 65537, 0, 458733, 65537, 0, -393235, 65537, 0, -458771, 65537, 0, 18, 65537, 0, 65554, 65537, 0, 131091, 65537, 0, 196627, 65537, 0, 262163, 65537, 0, 327699, 65537, 0, 393234, 65537, 0, 327698, 65537, 0, 262162, 65537, 0, 196626, 65537, 0, 131090, 65537, 0, -65518, 65537, 0, -131054, 65537, 0, -196590, 65537, 0, -262126, 65537, 0, -327662, 65537, 0, -393198, 65537, 0, 655341, 65537, 0, 655342, 65537, 0, 851950, 65537, 0, 786414, 65537, 0, 720877, 65537, 0, 65555, 65537, 0, 19, 65537, 0, -65517, 65537, 0, -131053, 65537, 0, -196589, 65537, 0, -262125, 65537, 0, -327661, 65537, 0, -393197, 65537, 0, -393195, 65537, 0, -327659, 65537, 0, -262123, 65537, 0, -196587, 65537, 0, -131051, 65537, 0, -65515, 65537, 0, 20, 65537, 0, 65556, 65537, 0, 131092, 65537, 0, 196628, 65537, 0, 262164, 65537, 0, 327700, 65537, 0, -393196, 65537, 0, -327660, 65537, 0, -262124, 65537, 0, -196588, 65537, 0, -131052, 65537, 0, 21, 65537, 0, 65557, 65537, 0, 131093, 65537, 0, 196629, 65537, 0, 262165, 65537, 0, 327701, 65537, 0, 393237, 65537, 0, 458773, 65537, 0, 524309, 65537, 0, 393238, 65537, 0, 327702, 65537, 0, 262166, 65537, 0, 196630, 65537, 0, 131094, 65537, 0, 65558, 65537, 0, 22, 65537, 0, -65514, 65537, 0, -131050, 65537, 0, -196586, 65537, 0, -262122, 65537, 0, -327658, 65537, 0, -393194, 65537, 0)

[node name="Spawner" parent="." instance=ExtResource("1_4xxv1")]

[node name="player" parent="." instance=ExtResource("1_p82kn")]
position = Vector2(541, 310)

[node name="Camera2D" type="Camera2D" parent="player"]
position_smoothing_speed = 15.0

[node name="Control" type="Control" parent="player/Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -541.0
offset_top = -310.0
offset_right = -501.0
offset_bottom = -270.0
script = ExtResource("8_xs2jl")

[node name="player_experience" parent="player/Camera2D/Control" instance=ExtResource("5_nn8u4")]
layout_mode = 0
offset_left = 149.0
offset_top = 57.0
offset_right = 908.0
offset_bottom = 67.0

[node name="PlayerLife" parent="player/Camera2D/Control" instance=ExtResource("6_w0xnf")]
layout_mode = 0
offset_left = 150.0
offset_top = 28.0
offset_right = 909.0
offset_bottom = 55.0

[node name="timer_label" type="Label" parent="player/Camera2D/Control"]
layout_mode = 0
offset_left = -3.0
offset_top = 12.0
offset_right = 100.0
offset_bottom = 67.0
text = "15:00"
label_settings = SubResource("LabelSettings_nknnf")

[node name="Timer" type="Timer" parent="player/Camera2D/Control"]
autostart = true

[node name="levelup_control" type="Control" parent="player/Camera2D/Control"]
process_mode = 3
anchors_preset = 0
offset_left = 425.0
offset_top = 175.0
offset_right = 489.0
offset_bottom = 220.0
script = ExtResource("8_bgkol")

[node name="ColorRect" type="ColorRect" parent="player/Camera2D/Control/levelup_control"]
layout_mode = 0
offset_left = -81.0
offset_top = 2.0
offset_right = 340.0
offset_bottom = 362.0
color = Color(0, 0, 0.6, 0.490196)

[node name="upgrades_container" type="VBoxContainer" parent="player/Camera2D/Control/levelup_control"]
layout_mode = 0
offset_left = 34.0
offset_top = 58.0
offset_right = 290.0
offset_bottom = 311.0
theme_override_constants/separation = 9

[node name="HBoxContainer" type="HBoxContainer" parent="player/Camera2D/Control/levelup_control/upgrades_container"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="item_sprite" type="Sprite2D" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer"]
position = Vector2(-51, 28)
scale = Vector2(2.75, 2.63542)
texture = ExtResource("10_nyb0n")
hframes = 2
vframes = 3
frame = 4

[node name="VBoxContainer" type="VBoxContainer" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "name"
label_settings = SubResource("LabelSettings_848dy")

[node name="Label2" type="Label" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "description"
label_settings = SubResource("LabelSettings_6iq30")
autowrap_mode = 2

[node name="upgrade01" type="Button" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer"]
layout_mode = 2
text = "Selecionar"

[node name="HBoxContainer2" type="HBoxContainer" parent="player/Camera2D/Control/levelup_control/upgrades_container"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="item_sprite" type="Sprite2D" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer2"]
position = Vector2(-51, 28)
scale = Vector2(2.75, 2.63542)
texture = ExtResource("10_nyb0n")
hframes = 2
vframes = 3

[node name="VBoxContainer" type="VBoxContainer" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "name"
label_settings = SubResource("LabelSettings_848dy")

[node name="Label2" type="Label" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "description
"
label_settings = SubResource("LabelSettings_6iq30")
autowrap_mode = 2

[node name="upgrade02" type="Button" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer2"]
layout_mode = 2
text = "Selecionar"

[node name="HBoxContainer3" type="HBoxContainer" parent="player/Camera2D/Control/levelup_control/upgrades_container"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="item_sprite" type="Sprite2D" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer3"]
position = Vector2(-51, 28)
scale = Vector2(2.75, 2.63542)
texture = ExtResource("10_nyb0n")
hframes = 2
vframes = 3

[node name="VBoxContainer" type="VBoxContainer" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "name"
label_settings = SubResource("LabelSettings_848dy")

[node name="Label2" type="Label" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer3/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "description
"
label_settings = SubResource("LabelSettings_6iq30")
autowrap_mode = 2

[node name="upgrade03" type="Button" parent="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer3"]
layout_mode = 2
text = "Selecionar"

[node name="Label" type="Label" parent="player/Camera2D/Control/levelup_control"]
layout_mode = 0
offset_left = 45.0
offset_top = 10.0
offset_right = 266.0
offset_bottom = 44.0
text = "Selecione um item:"
label_settings = SubResource("LabelSettings_gw1fn")

[node name="bg_music_lvl_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ljdk8")

[node name="bg_music_lvl_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_oiw56")

[node name="bg_music_lvl_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_xr6h0")

[node name="Node" type="Node" parent="."]

[node name="RigidBody2D" type="CharacterBody2D" parent="Node"]
position = Vector2(-3460, -1342)
scale = Vector2(-0.0957731, 3.34712)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/RigidBody2D"]
position = Vector2(-375.888, -98.2934)
scale = Vector2(72.1474, 2.89075)
shape = SubResource("SegmentShape2D_ga837")

[node name="RigidBody2D2" type="CharacterBody2D" parent="Node"]
position = Vector2(1105, 23)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/RigidBody2D2"]
position = Vector2(3357, -1662)
shape = SubResource("SegmentShape2D_ga837")

[node name="RigidBody2D3" type="CharacterBody2D" parent="Node"]
position = Vector2(-1189, -1656)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/RigidBody2D3"]
shape = SubResource("SegmentShape2D_58nrf")

[node name="RigidBody2D4" type="CharacterBody2D" parent="Node"]
position = Vector2(1181, 314)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/RigidBody2D4"]
position = Vector2(-2280, 1738)
shape = SubResource("SegmentShape2D_58nrf")

[connection signal="timeout" from="player/Camera2D/Control/Timer" to="player/Camera2D/Control" method="_on_timer_timeout"]
[connection signal="pressed" from="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer/upgrade01" to="player/Camera2D/Control/levelup_control" method="_on_upgrade_01_pressed"]
[connection signal="pressed" from="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer2/upgrade02" to="player/Camera2D/Control/levelup_control" method="_on_upgrade_02_pressed"]
[connection signal="pressed" from="player/Camera2D/Control/levelup_control/upgrades_container/HBoxContainer3/upgrade03" to="player/Camera2D/Control/levelup_control" method="_on_upgrade_03_pressed"]
